<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.aligkts.bankapp.ui.screens.register.RegisterViewModel" />

    </data>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/layout_root"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="true"
            android:focusableInTouchMode="true">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/name"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_name"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_name"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_name">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:singleLine="true"
                    android:text="@={viewModel.name}"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_surname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/surname"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_surname"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_surname"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_name" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_surname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_surname">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:singleLine="true"
                    android:text="@={viewModel.surname}"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/email"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_email"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_email"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_surname" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_email">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:singleLine="true"
                    android:text="@={viewModel.email}"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatSpinner
                android:id="@+id/spinner_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                style="@style/SpinnerWithoutArrow"
                android:textColor="@color/primaryTextColor"
                app:layout_constraintBottom_toTopOf="@id/txt_date_of_birth"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_input_layout_email" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_date_of_birth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="8dp"
                android:text="@string/date_of_birth"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_date_of_birth"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_date_of_birth"
                app:layout_constraintTop_toBottomOf="@id/spinner_gender" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_date_of_birth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_date_of_birth">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_birth_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:focusable="false"
                    android:onClick="@{viewModel.delegate::showDatePickerDialog}"
                    android:singleLine="true"
                    android:text="@={viewModel.birthDate}"
                    android:textColor="#939393"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/icon_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="8dp"
                android:layout_marginTop="8dp"
                android:text="@string/password"
                app:layout_constraintBottom_toTopOf="@id/text_input_layout_password"
                app:layout_constraintStart_toStartOf="@id/text_input_layout_password"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_date_of_birth" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_layout_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="48dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/icon_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="#707070">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawablePadding="20dp"
                    android:inputType="textPassword"
                    android:singleLine="true"
                    android:text="@={viewModel.password}"
                    android:textCursorDrawable="@null" />

            </com.google.android.material.textfield.TextInputLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_sign_up"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:onClick="@{() -> viewModel.register()}"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/buttonDefaultTextColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_input_layout_password" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</layout>
